syntax = "proto3";

package services;

option java_multiple_files = true;
option java_package = "fima.services.transaction.write";
option java_outer_classname = "TransactionWritesServiceProtos";

message OpenBankAccountRequest {
    string accountNumber = 1;
    float initialBalance = 2;
}

message OpenBankAccountResponse {
    repeated string errorMessages = 1;
}

message WithdrawRequest {
    int32 date = 1;
    string name = 2;
    string from_account = 3;
    string to_account = 4;
    string type = 5;
    int64 amountInCents = 6;
    string details = 7;
}

message WithdrawResponse {
    repeated string errorMessages = 1;
}

message DepositRequest {
    int32 date = 1;
    string name = 2;
    string from_account = 3;
    string to_account = 4;
    string type = 5;
    int64 amountInCents = 6;
    string details = 7;
}

message DepositResponse {
    repeated string errorMessages = 1;
}

service TransactionWritesService {

    rpc openBankAccount(OpenBankAccountRequest) returns (OpenBankAccountResponse) {}

    rpc withdraw(WithdrawRequest) returns (WithdrawResponse) {}

    rpc deposit(DepositRequest) returns (DepositResponse) {}

}
